# chatgpt-mba

./: README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
